chainsaw/testdata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ($namespace)
